--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
     </div>
     <div class="slider">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="XC90" class="slider__item slider__item--active">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="V40" class="slider__item">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="S90" class="slider__item">
+        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="XC90" class="slider__item slider__item--active" id="1">
+        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="V40" class="slider__item" id="2">
+        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="S90" class="slider__item" id="3">
     </div>
 <script src="js/main.js"></script>
 </body>
