Finish css for 320px

--- a/index.html
+++ b/index.html
@@ -25,29 +25,34 @@
     <div class="cars" id="cars">
         <div class="cars__vehicle cars__vehicle--active">
             <p class="cars__title">Volvo <span class="cars__title--model">XC90</span></p>
-            <p class="cars__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi ipsa, quo explicabo reiciendis numquam suscipit debitis molestiae. Iste quam cupiditate aut modi suscipit hic!</p>
-            <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="Volvo XC90" class="cars__img">
+            <p class="cars__desc">Electrified powertrains, smart connectivity services and a uniquely Scandinavian sense of craftsmanship and ingenuity – this is the new XC90. The luxury car with purpose. Take the steering and catch your dreams.</p>
+            <img src="images/xc90.png" alt="Volvo XC90" class="cars__img">
             <p class="cars__desc--right">
                 <button class="cars__button">Learn more!</button>
             </p>
         </div>
         <div class="cars__vehicle">
             <p class="cars__title">Volvo <span class="cars__title--model">V40</span></p>
-            <p class="cars__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi ipsa, quo explicabo reiciendis numquam suscipit debitis molestiae. Iste quam cupiditate aut modi suscipit hic!</p>
-            <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="Volvo V40" class="cars__img">
+            <p class="cars__desc">Amongst the many safety attributes of the Volvo V40 is a world-first pedestrian airbag system. This is in addition to other ground-breaking systems. Take the steering and catch your dreams. Drive it - love it.</p>
+            <img src="images/v40.png" alt="Volvo V40" class="cars__img">
             <p class="cars__desc--right"><button class="cars__button">Learn more!</button></p>
         </div>
         <div class="cars__vehicle">
             <p class="cars__title">Volvo <span class="cars__title--model">XC90</span></p>
-            <p class="cars__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi ipsa, quo explicabo reiciendis numquam suscipit debitis molestiae. Iste quam cupiditate aut modi suscipit hic!</p>
-            <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="Volvo S90" class="cars__img">
+            <p class="cars__desc">A true challenger in the compact car premium segment, the C30 displays clear elements of classic Volvo models with a sporty emphasis. Two-door model offers a sporty and harmonious driving experience for those with an active lifestyle.</p>
+            <img src="images/c30.png" alt="Volvo C30" class="cars__img">
             <p class="cars__desc--right"><button class="cars__button">Learn more!</button></p>
         </div>
     </div>
     <div class="slider">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="XC90" class="slider__item slider__item--active" id="1">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="V40" class="slider__item" id="2">
-        <img src="https://img.sm360.ca/ir/w640h390c/images/newcar/ca/2019/volvo/xc-90/momentum/suv/exteriorColors/12934_cc0640_001_707.png" alt="S90" class="slider__item" id="3">
+        <div>
+        <img src="images/xc90.png" alt="XC90" class="slider__item slider__item--active" id="1">
+    </div>
+    <div> 
+    <img src="images/v40.png" alt="V40" class="slider__item" id="2">
+</div>   <div>
+        <img src="images/c30.png" alt="C30" class="slider__item" id="3">
+    </div>
     </div>
    <div class="offer" id="offer">
        <h1 class="offer__title">Our offer includes:</h1>
@@ -81,7 +86,7 @@
 </div>        
 <div class="test" id="test">
         <p class="test__title">Sign up for a test drive!</p>
-        <form action="#" method="post" class="test__form">
+        <form class="test__form">
             <input type="text" required name="name" placeholder="Please type in your full name" class="test__input">
             <input type="email" required name="email" placeholder="Please type in your email" class="test__input">
             <input type="text" required name="phone" placeholder="Please type in your phone number" class="test__input">
@@ -89,6 +94,24 @@
         </form>
 </div>
 <footer class="footer">
+    <div class="footer__socials">
+            <p class="footer__title">Find us on:</p>
+            <div class="footer__item">
+                    <i class="fa fa-instagram footer__item"></i>
+                    <p class="footer__desc">@volvocars</p>
+            </div>
+            <div class="footer__item">
+                    <i class="fa fa-twitter footer__item"></i>
+                    <p class="footer__desc">@officialVolvoCars</p>
+            </div>
+            <div class="footer__item">
+                    <i class="fa fa-facebook-official footer__item"></i>
+                    <p class="footer__desc">@VolvoCarsSE</p>
+            </div>
+   
+            
+            <p class="footer__copyrights">Bartłomiej Fornalczyk</p>     
+    </div>
     
 </footer>
  
