css for max 360px

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="cars__desc--right"><button class="cars__button">Learn more!</button></p>
         </div>
         <div class="cars__vehicle">
-            <p class="cars__title">Volvo <span class="cars__title--model">XC90</span></p>
+            <p class="cars__title">Volvo <span class="cars__title--model">C30</span></p>
             <p class="cars__desc">A true challenger in the compact car premium segment, the C30 displays clear elements of classic Volvo models with a sporty emphasis. Two-door model offers a sporty and harmonious driving experience for those with an active lifestyle.</p>
             <img src="images/c30.png" alt="Volvo C30" class="cars__img">
             <p class="cars__desc--right"><button class="cars__button">Learn more!</button></p>
@@ -78,11 +78,7 @@
 </div>      
 <div class="about" id="about">
     <p class="about__title">Our history</p>
-    <p class="about__desc">Volvo Cars started producing automobiles in Sweden in 1927. Today, we’re global, with sales in about 100 countries.
-
-        We focus always on innovation and world-leading safety technology. Our history of game-changing achievements positions Volvo Cars as one of the most respected and recognisable car brands in the world.
-        
-        Our award-winning Volvo cars continue to set new benchmarks in automotive safety and connectivity, and we are committed to our industry-leading vision for an all-electric future.</p>
+    <p class="about__desc">Volvo Cars started producing automobiles in Sweden in 1927. Today, we’re global, with sales in about 100 countries. We focus always on innovation and world-leading safety technology. Our history of game-changing achievements positions Volvo Cars as one of the most respected and recognisable car brands in the world.       Our award-winning Volvo cars continue to set new benchmarks in automotive safety and connectivity, and we are committed to our industry-leading vision for an all-electric future.</p>
 </div>        
 <div class="test" id="test">
         <p class="test__title">Sign up for a test drive!</p>
